--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -1,10 +1,68 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
+<!doctype html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:with="http://www.thymeleaf.org/extras/with"
+      with:title="'Welcome to the Design Thinking Platform'">
+<th:block layout:insert="~{fragments/htmlHead}"/>
 <body>
-
+<div class="app-container app-theme-white body-tabs-shadow">
+    <div class="app-container">
+        <div class="h-100 bg-plum-plate bg-animation">
+            <div class="d-flex h-100 justify-content-center align-items-center">
+                <div class="mx-auto app-login-box col-md-8">
+                    <div class="header_logo-inv mx-auto"></div>
+                    <div class="modal-dialog w-100">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <h5 class="modal-title">
+                                    <h4 class="mt-2">
+                                        <div>Δημιουργία Λογαριασμού</div>
+                                    </h4>
+                                </h5>
+                                <div class="divider row"></div>
+                                <div class="form-row">
+                                    <div class="col-md-12">
+                                        <div class="position-relative form-group">
+                                            <input type="text" name="name" id="name" placeholder="Όνομα..."
+                                                   class="form-control"></div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="position-relative form-group">
+                                            <input type="text" name="lastName" id="lastName" placeholder="Επώνυμο..."
+                                                   class="form-control"></div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="position-relative form-group">
+                                            <input type="email" name="email" id="email" placeholder="Το email σας..."
+                                                   class="form-control"></div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="position-relative form-group">
+                                            <input type="password" name="password" id="password" class="form-control"
+                                                   placeholder="Προσωπικός Κωδικός..."></div>
+                                    </div>
+                                    <div class="col-md-12">
+                                        <div class="position-relative form-group">
+                                        <input type="password" name="passwordRep" id="passwordRep" class="form-control"
+                                               placeholder="Επανάληψη κωδικού..."></div>
+                                    </div>
+                                </div>
+<!--                                <div class="mt-3 position-relative form-check"><input name="check" id="exampleCheck" type="checkbox" class="form-check-input"><label for="exampleCheck" class="form-check-label">Accept our <a href="javascript:void(0);">Terms-->
+<!--                                    and Conditions</a>.</label></div>-->
+                                <div class="divider row"></div>
+                                <h6 class="mb-0">Έχετε ήδη λογαριασμό
+                                    <a th:href="@{/login}" class="text-primary">Είσοδος</a> |
+                                    <a th:href="@{/passForgot}" class="text-primary">Ξέχασα τον κωδικό μου!</a>
+                                </h6></div>
+                            <div class="modal-footer d-block text-center">
+                                <button class="btn-wide btn-pill btn-shadow btn-hover-shine btn btn-primary btn-lg">Δημιουργία λογαριασμού</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<th:block layout:replace="~{fragments/jsScripts :: end}"/>
 </body>
 </html>
