--- a/src/main/resources/templates/project/dashboard.html
+++ b/src/main/resources/templates/project/dashboard.html
@@ -1,7 +1,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       xmlns:with="http://www.thymeleaf.org/extras/with"
       layout:decorate="~{layout}"
-      with:title="User profile">
+      with:title="Project Dashboard">
 <th:block layout:fragment="content">
 
 </th:block>
