--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -42,10 +42,10 @@
                                         </div>
                                     </div>
                                 </form>
-                                <div class="divider"></div>
-                                <h6 class="mb-0">Δεν έχετε λογαριασμό;
-                                    <a th:href="@{/registration}" class="text-primary">Δημιουργία λογαριασμού</a></h6>
-                            </div>
+<!--                                <div class="divider"></div>-->
+<!--                                <h6 class="mb-0">Δεν έχετε λογαριασμό;-->
+<!--                                    <a th:href="@{/registration}" class="text-primary">Δημιουργία λογαριασμού</a></h6>-->
+<!--                            </div>-->
                             <div class="modal-footer clearfix">
                                 <div class="float-left"><a th:href="@{/passForgot}" class="btn-lg btn btn-link">
                                     Ξέχασα τον κωδικό μου</a></div>
