Can add new members in Project

--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -12,8 +12,8 @@
             <h1>500</h1>
         </div>
         <h2>Internal server error</h2>
-        <p>Κάτι συμβαίνει με τον διακομιστή μας, δοκιμάστε ξανά αργότερα.</p>
-        <a th:href="@{/}">Επιστροφή στην αρχική σελίδα</a>
+        <p>Κατι συμβαινει με τον διακομιστη μας, δοκιμαστε ξανα αργοτερα.</p>
+        <a th:href="@{/}">Επιστροφη στην αρχικη σελιδα</a>
     </div>
 </div>
 </body>
