--- a/src/main/resources/templates/error/404.html
+++ b/src/main/resources/templates/error/404.html
@@ -11,9 +11,9 @@
         <div class="notfound-404">
             <h1>404</h1>
         </div>
-        <h2>Oops! This Page Could Not Be Found</h2>
-        <p>Sorry but the page you are looking for does not exist, have been removed. name changed or is temporarily unavailable</p>
-        <a th:href="@{/}">Επιστροφή στην αρχική σελίδα</a>
+        <h2>Oops! Η σελίδα που ψάχνετε δεν υπάρχει</h2>
+        <p>Λυπουμαστε αλλα η σελιδα που ψαχνετε δεν υπαρχει η δεν είναι προσωρινα διαθεσιμη</p>
+        <a th:href="@{/}">Επιστροφη στην αρχικη σελιδα</a>
     </div>
 </div>
 </body>
