--- a/src/main/resources/templates/project/views/ideaCreation.html
+++ b/src/main/resources/templates/project/views/ideaCreation.html
@@ -4,7 +4,7 @@
       layout:decorate="~{layout}"
       with:title="Project Dashboard">
 <th:block layout:fragment="content">
-    <th:block th:with='role=${#strings.toLowerCase(#authentication.principal.authorities[0]).replace("role_", "")}'>
+<th:block th:with='role=${#strings.toLowerCase(#authentication.principal.authorities[0]).replace("role_", "")}'>
     <div class="app-main__inner">
         <!-- MAIN CONTENT TITLE -->
         <div class="app-page-title">
@@ -139,24 +139,76 @@
         </div>
     </div>
     <!-- Add member modal -->
-    <div class="modal fade" id="addMemberModal" tabindex="-1" role="dialog"
-         aria-labelledby="exampleModalLabel" aria-hidden="true" data-backdrop="false">
+    <div class="modal fade" id="addMemberModal" tabindex="-1" role="dialog" data-backdrop="false"
+         aria-labelledby="addMemberModalTitle" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
+            <form class="modal-content" th:action="@{/admin/project/{pid}/addMembers(pid=${project.getId()})}"
+                  action="#" method="POST">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="addMemberModalTitle">Προσθήκη νέων μελών</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
                 <div class="modal-body">
-                    <p class="mb-0">Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled.</p>
+                    <div class="card-hover-shadow-2x mb-3 card">
+                        <div class="scroll-area-md">
+                            <div class="scrollbar-container">
+                                <div class="p-2">
+                                    <ul class="todo-list-wrapper list-group list-group-flush">
+<!--                                        <input type="hidden" th:value="${project.getId()}">-->
+                                        <li th:each="member : ${usersNotInProject}" class="list-group-item">
+                                            <div class="todo-indicator bg-success"></div>
+                                            <div class="widget-content p-0">
+                                                <div class="widget-content-wrapper">
+                                                    <div class="widget-content-left mr-2">
+                                                        <div class="custom-checkbox custom-control">
+                                                            <input type="checkbox" name="members"
+                                                                   th:id="${'cb'+member.getId()}"
+                                                                   th:value="${member.getId()}" class="custom-control-input">
+                                                            <label class="custom-control-label" th:for="${'cb'+member.getId()}">&nbsp;</label>
+                                                        </div>
+                                                    </div>
+                                                    <div class="widget-content-left mr-3">
+                                                        <div class="widget-content-left">
+                                                            <img class="rounded" alt="" width="30"
+                                                                 th:src="@{/img/avatars/{img}(img=${member.getProfilePic()})}">
+                                                        </div>
+                                                    </div>
+                                                    <div class="widget-content-left flex2">
+                                                        <div th:text="${member.getFullName()}" class="widget-heading">
+                                                            Name
+                                                        </div>
+                                                        <div th:text="${member.getEmail()}" class="widget-subheading">
+                                                            email
+                                                        </div>
+                                                    </div>
+<!--                                                    <div class="widget-content-right widget-content-actions">-->
+<!--                                                        <div th:if="${project.getManager().getId()==member.getId()}"-->
+<!--                                                             class="badge badge-warning mr-2">Manager</div>-->
+<!--                                                        <button class="border-0 btn-transition btn btn-outline-danger"-->
+<!--                                                                th:if="${project.getManager().getId()!=member.getId()-->
+<!--                                                and isManager == true}"-->
+<!--                                                                data-toggle="modal"-->
+<!--                                                                th:data-target="${'#modal_'+member.getId()}">-->
+<!--                                                            <i class="fa fa-trash-alt"></i>-->
+<!--                                                        </button>-->
+<!--                                                    </div>-->
+                                                </div>
+                                            </div>
+                                        </li>
+                                    </ul>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="submit" class="btn btn-primary">Προσθήκη</button>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
     <!-- Delete confirmation modals -->
@@ -199,8 +251,9 @@
     </script>
     <style>
         .modal {
-            padding-top: 15%;
+            padding-top: 3%;
         }
     </style>
+</th:block>
 </th:block>
 </html>
