--- a/src/main/resources/templates/project/views/ideaCreation.html
+++ b/src/main/resources/templates/project/views/ideaCreation.html
@@ -139,106 +139,10 @@
         </div>
     </div>
     <!-- Add member modal -->
-    <div class="modal fade" id="addMemberModal" tabindex="-1" role="dialog" data-backdrop="false"
-         aria-labelledby="addMemberModalTitle" aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <form class="modal-content" th:action="@{/admin/project/{pid}/addMembers(pid=${project.getId()})}"
-                  action="#" method="POST">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="addMemberModalTitle">Προσθήκη νέων μελών</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <div class="card-hover-shadow-2x mb-3 card">
-                        <div class="scroll-area-md">
-                            <div class="scrollbar-container">
-                                <div class="p-2">
-                                    <ul class="todo-list-wrapper list-group list-group-flush">
-<!--                                        <input type="hidden" th:value="${project.getId()}">-->
-                                        <li th:each="member : ${usersNotInProject}" class="list-group-item">
-                                            <div class="todo-indicator bg-success"></div>
-                                            <div class="widget-content p-0">
-                                                <div class="widget-content-wrapper">
-                                                    <div class="widget-content-left mr-2">
-                                                        <div class="custom-checkbox custom-control">
-                                                            <input type="checkbox" name="members"
-                                                                   th:id="${'cb'+member.getId()}"
-                                                                   th:value="${member.getId()}" class="custom-control-input">
-                                                            <label class="custom-control-label" th:for="${'cb'+member.getId()}">&nbsp;</label>
-                                                        </div>
-                                                    </div>
-                                                    <div class="widget-content-left mr-3">
-                                                        <div class="widget-content-left">
-                                                            <img class="rounded" alt="" width="30"
-                                                                 th:src="@{/img/avatars/{img}(img=${member.getProfilePic()})}">
-                                                        </div>
-                                                    </div>
-                                                    <div class="widget-content-left flex2">
-                                                        <div th:text="${member.getFullName()}" class="widget-heading">
-                                                            Name
-                                                        </div>
-                                                        <div th:text="${member.getEmail()}" class="widget-subheading">
-                                                            email
-                                                        </div>
-                                                    </div>
-<!--                                                    <div class="widget-content-right widget-content-actions">-->
-<!--                                                        <div th:if="${project.getManager().getId()==member.getId()}"-->
-<!--                                                             class="badge badge-warning mr-2">Manager</div>-->
-<!--                                                        <button class="border-0 btn-transition btn btn-outline-danger"-->
-<!--                                                                th:if="${project.getManager().getId()!=member.getId()-->
-<!--                                                and isManager == true}"-->
-<!--                                                                data-toggle="modal"-->
-<!--                                                                th:data-target="${'#modal_'+member.getId()}">-->
-<!--                                                            <i class="fa fa-trash-alt"></i>-->
-<!--                                                        </button>-->
-<!--                                                    </div>-->
-                                                </div>
-                                            </div>
-                                        </li>
-                                    </ul>
-
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="submit" class="btn btn-primary">Προσθήκη</button>
-                </div>
-            </form>
-        </div>
-    </div>
+    <th:block layout:insert="~{fragments/modalAddMembers}"/>
     <!-- Delete confirmation modals -->
-    <div th:each="member : ${project.getMembers()}">
-        <div class="modal fade bd-example-modal-sm" data-backdrop="false"
-             tabindex="-1" role="dialog" th:id="${'modal_'+member.getId()}"
-             aria-labelledby="mySmallModalLabel" aria-hidden="true">
-            <div class="modal-dialog modal-sm">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h5 class="modal-title" id="exampleModalLongTitle">
-                            Διαγραφή Μέλους</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
-                    </div>
-                    <div class="modal-body">
-                        <p>Είστε σίγουροι πως θέλετε να διαγράψετε το μέλος από την ομάδα εργασίας;</p>
-                        <p>Το μέλος θα αφαιρεθεί μόνο από το project αυτό και όχι από την πλατφόρμα.</p>
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Άκυρο</button>
-                        <a th:href="@{/admin/project/{pid}/member/remove/{id}(pid=${project.getId()}, id=${member.getId()})}">
-                            <button type="button" class="btn btn-danger">Διαγραφή</button>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <th:block layout:insert="~{fragments/modalRemoveMemberConfirm}"/>
+
     <script>
         function hideDiv(divId) {
             var x = document.getElementById(divId);
