Moved the modals to separate fragments for reusing them

--- a/src/main/resources/templates/error/500.html
+++ b/src/main/resources/templates/error/500.html
@@ -12,7 +12,7 @@
             <h1>500</h1>
         </div>
         <h2>Internal server error</h2>
-        <p>Κατι συμβαινει με τον διακομιστη μας, δοκιμαστε ξανα αργοτερα.</p>
+        <p>Κατι πήγε στραβά, δοκιμαστε ξανα και αν ξανασυμβεί επικοινωνήστε μαζί μας.</p>
         <a th:href="@{/}">Επιστροφη στην αρχικη σελιδα</a>
     </div>
 </div>
