Added modal for adding extreme user categories. Changed modelling so that a project contains ExtremeUserCategories and not specific ExtremeUsers

--- a/src/main/resources/templates/project/views/challengeDefinition.html
+++ b/src/main/resources/templates/project/views/challengeDefinition.html
@@ -37,6 +37,8 @@
         <th:block layout:insert="~{fragments/modals/removeMemberConfirm}"/>
         <!-- Complete stage confirmation modal -->
         <th:block layout:insert="~{fragments/modals/nextStageConfirm}"/>
+        <!-- Add extreme user category modal -->
+        <th:block layout:insert="~{fragments/modals/addExtrUsrCategory}"/>
     </th:block>
 </th:block>
 </html>
