Added pages for viewing & updating users, list of platform users, as well as views for all project stages upto ideas creation

--- a/src/main/resources/templates/project/new.html
+++ b/src/main/resources/templates/project/new.html
@@ -14,7 +14,7 @@
                         </i>
                     </div>
                     <div>Νέο project
-                        <div class="page-title-subheading">Εδώ μπορείτε να δημιουργήσετε ένα καινούργιο project
+                        <div class="page-title-subheading">Εδώ μπορείτε να δημιουργήσετε ένα νέο project
                         </div>
                     </div>
                 </div>
