--- a/src/main/resources/templates/project/views/ideaCreation.html
+++ b/src/main/resources/templates/project/views/ideaCreation.html
@@ -4,36 +4,45 @@
       layout:decorate="~{layout}"
       with:title="Project Dashboard">
 <th:block layout:fragment="content">
-<th:block th:with='role=${#strings.toLowerCase(#authentication.principal.authorities[0]).replace("role_", "")}'>
-    <div class="app-main__inner">
-        <!-- MAIN CONTENT TITLE -->
-        <div class="app-page-title">
-            <div class="page-title-wrapper">
-                <div class="page-title-heading">
-                    <div class="page-title-icon">
-                        <i class="pe-7s-albums icon-gradient bg-mean-fruit"></i>
+    <th:block th:with='role=${#strings.toLowerCase(#authentication.principal.authorities[0]).replace("role_", "")}'>
+        <div class="app-main__inner">
+            <!-- MAIN CONTENT TITLE -->
+            <div class="app-page-title">
+                <div class="page-title-wrapper">
+                    <div class="page-title-heading">
+                        <div class="page-title-icon">
+                            <i class="pe-7s-albums icon-gradient bg-mean-fruit"></i>
+                        </div>
+                        <div><span th:text="${project.getName()}"></span>
+                            <div class="page-title-subheading"><span th:text="${project.getDescription()}"></span></div>
+                        </div>
                     </div>
-                    <div><span th:text="${project.getName()}"></span>
-                        <div class="page-title-subheading"><span th:text="${project.getDescription()}"></span></div>
+                    <div class="page-title-actions">
+                        <button type="button" data-toggle="tooltip modal" data-target="#addFindingModal" title="" data-placement="bottom"
+                                class="btn-shadow mr-3 btn btn-alternate" data-original-title="Νέα Ιδέα">
+                            <i class="fa fa-lightbulb"></i>
+                        </button>
                     </div>
                 </div>
             </div>
+            <!-- END OF MAIN CONTENT TITLE -->
+            <div class="row">
+                <!-- Ideas List component -->
+                <th:block layout:insert="~{fragments/components/projectIdeasList}"/>
+                <!-- Findings List component -->
+                <th:block layout:insert="~{fragments/components/projectFindingsList}"/>
+                <!-- Member List component -->
+                <th:block layout:insert="~{fragments/components/projectMemberList}"/>
+                <!-- project timeline component -->
+                <th:block layout:insert="~{fragments/components/projectTimeline}"/>
+            </div>
         </div>
-        <!-- END OF MAIN CONTENT TITLE -->
-        <div class="row">
-            <!-- Member List component -->
-            <th:block layout:insert="~{fragments/components/projectMemberList}"/>
-            <!-- project timeline component -->
-            <th:block layout:insert="~{fragments/components/projectTimeline}"/>
-        </div>
-    </div>
-    <!-- Add member modal -->
-    <th:block layout:insert="~{fragments/modals/addMembers}"/>
-    <!-- Delete confirmation modals -->
-    <th:block layout:insert="~{fragments/modals/removeMemberConfirm}"/>
-    <!-- Complete stage confirmation modal -->
-    <th:block layout:insert="~{fragments/modals/nextStageConfirm}"/>
-
+        <!-- Add member modal -->
+        <th:block layout:insert="~{fragments/modals/addMembers}"/>
+        <!-- Delete confirmation modals -->
+        <th:block layout:insert="~{fragments/modals/removeMemberConfirm}"/>
+        <!-- Complete stage confirmation modal -->
+        <th:block layout:insert="~{fragments/modals/nextStageConfirm}"/>
     </th:block>
 </th:block>
 </html>
