--- a/src/main/resources/templates/project/views/resourcesCollection.html
+++ b/src/main/resources/templates/project/views/resourcesCollection.html
@@ -17,9 +17,18 @@
                         <div class="page-title-subheading"><span th:text="${project.getDescription()}"></span></div>
                     </div>
                 </div>
+                <div class="page-title-actions">
+                    <button type="button" data-toggle="tooltip modal" data-target="#addResourceModal" title="" data-placement="bottom"
+                            class="btn-shadow mr-3 btn btn-alternate" data-original-title="Προσθήκη νέου υλικού">
+                        <i class="fa fa-upload"></i>
+                    </button>
+                </div>
             </div>
         </div>
         <!-- END OF MAIN CONTENT TITLE -->
+
+        <th:block layout:insert="~{fragments/components/projectResourcesList}"/>
+
         <div class="row">
             <!-- Member List component -->
             <th:block layout:insert="~{fragments/components/projectMemberList}"/>
@@ -27,6 +36,8 @@
             <th:block layout:insert="~{fragments/components/projectTimeline}"/>
         </div>
     </div>
+        <!-- Add resource modal -->
+        <th:block layout:insert="~{fragments/modals/addResource}"/>
         <!-- Add member modal -->
         <th:block layout:insert="~{fragments/modals/addMembers}"/>
         <!-- Delete confirmation modals -->
