--- a/src/main/resources/templates/fragments/components/projectResourcesList.html
+++ b/src/main/resources/templates/fragments/components/projectResourcesList.html
@@ -5,11 +5,11 @@
 </div>
 
 <div class="row">
-    <div class="col-sm-12 col-lg-6 col-xl-4">
+    <div class="col-sm-4 col-lg-3 col-xl-2"> <!-- 12 6 4 -->
         <div class="mb-3 profile-responsive card">
             <div class="dropdown-menu-header">
-                <div class="dropdown-menu-header-inner bg-dark">
-                    <div class="menu-header-image opacity-2" style="background-image: url('assets/images/dropdown-header/abstract2.jpg');"></div>
+                <div class="dropdown-menu-header-inner bg-focus">
+                    <div class="menu-header-image opacity-2" th:style="'background-image: url('+@{/img/dropdown-header/abstract3.jpg}+');'"></div>
                     <div class="menu-header-content btn-pane-right">
                         <div class="avatar-icon-wrapper mr-3 avatar-icon-xl btn-hover-shine">
                             <div class="avatar-icon rounded">
@@ -42,12 +42,12 @@
                 <li class="p-0 list-group-item">
                     <div class="grid-menu grid-menu-2col">
                         <div class="no-gutters row">
-                            <div class="col-sm-6">
+                            <div class="col-sm-4">
                                 <button class="btn-icon-vertical btn-square btn-transition br-bl btn btn-outline-link">
                                     <i class="fa fa-file-pdf btn-icon-wrapper btn-icon-lg mb-3"> </i>
                                 </button>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-sm-4">
                                 <button class="btn-icon-vertical btn-square btn-transition br-br btn btn-outline-link">
                                     <i class="fa fa-comments btn-icon-wrapper btn-icon-lg mb-3"> </i>
                                 </button>
@@ -59,7 +59,7 @@
         </div>
     </div>
 
-    <div class="col-sm-12 col-lg-6 col-xl-4">
+    <div class="col-sm-4 col-lg-3 col-xl-2">
         <div class="mb-3 profile-responsive card">
             <div class="dropdown-menu-header">
                 <div class="dropdown-menu-header-inner bg-dark">
@@ -94,12 +94,12 @@
                 <li class="p-0 list-group-item">
                     <div class="grid-menu grid-menu-2col">
                         <div class="no-gutters row">
-                            <div class="col-sm-6">
+                            <div class="col-sm-4">
                                 <button class="btn-icon-vertical btn-square btn-transition br-bl btn btn-outline-link">
                                     <i class="fa fa-file-video btn-icon-wrapper btn-icon-lg mb-3"> </i>
                                 </button>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-sm-4">
                                 <button class="btn-icon-vertical btn-square btn-transition br-br btn btn-outline-link">
                                     <i class="fa fa-comments btn-icon-wrapper btn-icon-lg mb-3"> </i>
                                 </button>
@@ -112,7 +112,7 @@
     </div>
 
 
-    <div class="col-sm-12 col-lg-6 col-xl-4">
+    <div class="col-sm-4 col-lg-3 col-xl-2">
         <div class="mb-3 profile-responsive card">
             <div class="dropdown-menu-header">
                 <div class="dropdown-menu-header-inner bg-dark">
@@ -149,12 +149,12 @@
                 <li class="p-0 list-group-item">
                     <div class="grid-menu grid-menu-2col">
                         <div class="no-gutters row">
-                            <div class="col-sm-6">
+                            <div class="col-sm-4">
                                 <button class="btn-icon-vertical btn-square btn-transition br-bl btn btn-outline-link">
                                     <i class="fa fa-file-image btn-icon-wrapper btn-icon-lg mb-3"> </i>
                                 </button>
                             </div>
-                            <div class="col-sm-6">
+                            <div class="col-sm-4">
                                 <button class="btn-icon-vertical btn-square btn-transition br-br btn btn-outline-link">
                                     <i class="fa fa-comments btn-icon-wrapper btn-icon-lg mb-3"> </i>
                                 </button>
